k8s/todo-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-api
  namespace: todo

spec:
  type: ClusterIP

  selector:
    app: todo-api

  ports:
    - port: 80
      targetPort: 3000
