k8s/todo-db.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-db
  namespace: todo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-db

  template:
    metadata:
      labels:
        app: todo-db

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: todo-db-data

---

apiVersion: v1
kind: Service

metadata:
  name: todo-db
  namespace: todo

spec:
  selector:
    app: todo-db

  ports:
    - port: 5432
      targetPort: 5432
